<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.screens.RegisterScreen">

    <ImageView
        android:id="@+id/backButton"
        style="@style/BackButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/back" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/teal_100"
        android:text="@string/phone"
        app:layout_constraintBottom_toTopOf="@id/inputPhone"
        app:layout_constraintLeft_toLeftOf="@id/inputPhone"
        android:layout_margin="7dp"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/inputPhone"
        style="@style/EditText"
        android:hint="@string/phone"
        android:inputType="phone"
        android:maxLength="13"
        android:imeOptions="actionNext"
        android:text="@string/_998"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/inputPassword"
        style="@style/EditText"
        android:layout_marginTop="8dp"
        android:hint="@string/password"
        android:inputType="text"
        android:imeOptions="actionNext"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputPhone" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/inputConfirmPassword"
        style="@style/EditText"
        android:layout_marginTop="8dp"
        android:hint="@string/confirm_password"
        android:inputType="text"
        android:imeOptions="actionNext"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputPassword" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/lastName"
        style="@style/EditText"
        android:layout_marginTop="8dp"
        android:hint="@string/lastname"
        android:inputType="text"
        android:imeOptions="actionNext"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputConfirmPassword" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/firstName"
        style="@style/EditText"
        android:layout_marginTop="8dp"
        android:hint="@string/firstname"
        android:inputType="text"
        android:imeOptions="actionDone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lastName" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonRegister"
        style="@style/ActionButton"
        android:enabled="false"
        android:text="@string/ready"
        android:layout_marginTop="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstName" />

    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_gravity="center"
        android:visibility="gone"
        android:theme="@style/ContentLoadingProgress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>