<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_text"
    android:orientation="vertical"
    android:padding="20dp">

    <androidx.appcompat.widget.AppCompatEditText
        style="@style/txtStyle"
        android:id="@+id/title"
        android:hint="@string/title" />

    <androidx.appcompat.widget.AppCompatEditText
        style="@style/txtStyle"
        android:id="@+id/author"
        android:hint="@string/author" />

    <androidx.appcompat.widget.AppCompatEditText
        style="@style/txtStyle"
        android:id="@+id/description"
        android:hint="@string/description" />

    <androidx.appcompat.widget.AppCompatEditText
        style="@style/txtStyle"
        android:id="@+id/pages"
        android:hint="@string/page_count"
        android:imeOptions="actionDone"
        android:inputType="phone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cancelButton"
            android:layout_width="0dp"
            android:layout_weight="1"
            style="@style/ActionButton"
            android:text="@android:string/cancel"/>

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.15" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/saveButton"
            android:layout_width="0dp"
            android:enabled="false"
            android:layout_weight="1"
            style="@style/ActionButton"
            android:text="@android:string/ok" />
    </LinearLayout>

</LinearLayout>