<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ui.screens.LoginScreen">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone"
        app:layout_constraintBottom_toTopOf="@id/inputPhone"
        app:layout_constraintLeft_toLeftOf="@id/inputPhone"
        android:layout_margin="7dp"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/inputPhone"
        style="@style/EditText"
        android:hint="@string/phone"
        android:inputType="phone"
        android:maxLength="13"
        android:text="@string/_998"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/inputPassword"
        style="@style/EditText"
        android:layout_marginTop="8dp"
        android:inputType="text"
        android:hint="@string/password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputPhone" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonSubmit"
        style="@style/ActionButton"
        android:layout_marginBottom="30dp"
        android:text="@string/submit"
        app:layout_constraintBottom_toTopOf="@id/buttonRegister"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/buttonRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="150dp"
        android:textColor="@color/teal_700"
        android:textSize="18sp"
        android:padding="12dp"
        android:background="?android:selectableItemBackgroundBorderless"
        android:text="@string/create_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/progress"
        android:layout_width="56dp"
        style="?android:attr/progressBarStyle"
        android:theme="@style/ContentLoadingProgress"
        android:layout_height="56dp"
        android:layout_gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>