<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ImageView
        style="@style/BackButton"
        android:id="@+id/btnBack"
        app:tint="@color/teal_700"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/back" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/inputSmsCode"
        style="@style/EditText"
        android:layout_marginTop="72dp"
        android:hint="@string/enter_sms_code"
        android:inputType="number"
        android:maxLength="6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />

    <TextView
        android:id="@+id/counter"
        android:layout_width="wrap_content"
        android:padding="10dp"
        android:background="?android:selectableItemBackground"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:clickable="false"
        android:textColor="@color/teal_700"
        android:textSize="22sp"
        android:layout_marginBottom="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/inputSmsCode"
        tools:text="01:00" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSubmit"
        style="@style/ActionButton"
        android:layout_marginBottom="30dp"
        android:text="@string/submit"
        android:layout_width="140dp"
        android:enabled="false"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/inputSmsCode"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:theme="@style/ContentLoadingProgress"
        android:layout_marginBottom="12dp"
        android:max="160"
        android:progress="10"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/inputSmsCode"
        app:layout_constraintRight_toRightOf="@id/inputSmsCode" />
</androidx.constraintlayout.widget.ConstraintLayout>

